--- a/app/views/login/login.phtml
+++ b/app/views/login/login.phtml
@@ -5,12 +5,12 @@
   <div id="formContent">
     <!-- Tabs Titles -->
     <h2 class="active"> Sign In </h2>
-    <h2 class="inactive underlineHover"><a href="/UDPT-PROJECT/signup">Sign Up </a></h2>
+    <h2 class="inactive underlineHover"><a href="<?php echo _WEB_ROOT ?>/signup">Sign Up </a></h2>
 
    
 
     <!-- Login Form -->
-    <form method ="POST" action="/UDPT-PROJECT/login/loginpost" >
+    <form method ="POST" action="<?php echo _WEB_ROOT ?>/login/loginpost" >
       
       <input type="text" id="login" class="fadeIn second" name="username" placeholder="Username">
       <input type="password" id="password" class="fadeIn third" name="password" placeholder="Password">
@@ -24,10 +24,10 @@
     <div id="formFooter" >
       <div class="row">
         <div class="col-md-6" style="text-align:left">
-          <a class="underlineHover" href="/UDPT-PROJECT">Home Page</a>
+          <a class="underlineHover" href="<?php echo _WEB_ROOT ?>">Home Page</a>
         </div >
         <div class="col-md-6" style="text-align:right">
-          <a class="underlineHover" href="/UDPT-PROJECT/forgotpass" style="margin-right:0">Forgot Password?</a>
+          <a class="underlineHover" href="<?php echo _WEB_ROOT ?>/forgotpass" style="margin-right:0">Forgot Password?</a>
         </div>
       </div>
     </div>
