--- a/app/views/login/signup.phtml
+++ b/app/views/login/signup.phtml
@@ -1,12 +1,12 @@
 <div class="wrapper fadeInDown">
   <div id="formContent">
     <!-- Tabs Titles -->
-    <h2 class="inactive underlineHover"><a href="/UDPT-PROJECT/login"> Sign In </a></h2>
+    <h2 class="inactive underlineHover"><a href="<?php echo _WEB_ROOT ?>/login"> Sign In </a></h2>
     <h2 class="active">Sign Up </h2>
   
 
     <!-- Login Form -->
-    <form  method="post" action="/UDPT-PROJECT/signup/signuppost">
+    <form  method="post" action="<?php echo _WEB_ROOT ?>/signup/signuppost">
       <input type="text" id="username" class="fadeIn second" name="username" placeholder="Username">
       <input type="password" id="password" class="fadeIn third" name="password" placeholder="Password">
       <input type="password" id="repassword" class="fadeIn third" name="repassword" placeholder="Repassword">
@@ -25,10 +25,10 @@
     <div id="formFooter" >
       <div class="row">
         <div class="col-md-6" style="text-align:left">
-          <a class="underlineHover" href="/UDPT-PROJECT">Home Page</a>
+          <a class="underlineHover" href="<?php echo _WEB_ROOT ?>">Home Page</a>
         </div >
         <div class="col-md-6" style="text-align:right">
-          <a class="underlineHover" href="/UDPT-PROJECT/forgotpass" style="margin-right:0">Forgot Password?</a>
+          <a class="underlineHover" href="<?php echo _WEB_ROOT ?>/forgotpass" style="margin-right:0">Forgot Password?</a>
         </div>
       </div>
     </div>
