--- a/app/views/forgotpass/forgotpass.phtml
+++ b/app/views/forgotpass/forgotpass.phtml
@@ -4,7 +4,7 @@
     <h2 class="active"> Forgot Passowrd </h2>
  
     <!-- Login Form -->
-    <form method="POST" action="/UDPT-PROJECT/forgotpass/fogotpasspost">
+    <form method="POST" action="<?php echo _WEB_ROOT ?>/forgotpass/fogotpasspost">
     <p class="invalidFeedback" style="color:red">
         <?php if(isset($data)){echo $data["messenger"];}?>
       </p>
@@ -14,7 +14,7 @@
     
     <!-- Remind Passowrd -->
     <div id="formFooter">
-      <a class="underlineHover" href="/UDPT-PROJECT/login">Đăng nhập?</a>
+      <a class="underlineHover" href="<?php echo _WEB_ROOT ?>/login">Đăng nhập?</a>
     </div>
 
   </div>
