--- a/app/views/user/userProfile.phtml
+++ b/app/views/user/userProfile.phtml
@@ -166,7 +166,16 @@
                             <p ></p>
                             </div>
                             <div class="col-md-2" style="text-align: right;font-size: 15px;">
-                            <span  class="glyphicon glyphicon-edit"></span>
+                            <?php if ($ques["mod_id"] != null) { 
+                              echo '<a href="'._WEB_ROOT.'/questions/'.$ques["id_question"].'" target="_blank"><span  class="glyphicon glyphicon-info-sign"></span></a>';
+                              }
+                              else
+                              { 
+                              
+                              echo '<span  class="glyphicon glyphicon-edit"></span>';
+
+                              }?>
+                            
                             </div>
                           </div>
                           <div class="row">
@@ -188,7 +197,7 @@
                           <div class="row">
                             <div class="col-md-9"></div>
                             <div >
-                            <p style="text-align: center;font-size: 15px;"><?php echo $ques["likes"]?><span style="margin-left:1%;margin-right:1%; " class="glyphicon glyphicon-thumbs-up"></span>20 <span  class="glyphicon glyphicon-comment"></span></p>
+                            <p style="text-align: center;font-size: 15px;"><?php echo $ques["likes"]?><span style="margin-left:1%;margin-right:1%; " class="glyphicon glyphicon-thumbs-up"></span><?php echo $ques["comment"]?> <span  class="glyphicon glyphicon-comment"></span></p>
                             </div>
                           </div>
                         </div>
