--- a/app/views/home.phtml
+++ b/app/views/home.phtml
@@ -1,15 +1,27 @@
-<?php require_once("./app/views/header-footer/header.phtml"); ?>
-<div class="container-fluid text-center">
-    <div class="row content">
-        <div class="col-sm-2 sidenav">
+<div class="col-sm-2 sidenav">
+    
             <p style="background-color:moccasin;"><a href="#"><b>Topic</b></a></p>
             <p><a href="#"><b>Technology</b></a></p>
             <p><a href="#"><b>Society</b></a></p>
+</div>
+<div class="col-sm-7" style="text-align: left; padding-top:1%">
+    <div class="card" style="width: calc(100% - 48px);height: auto;overflow: hidden;padding: 1%;background-color: #fff;border-radius: 5px;box-shadow: 1% ; margin-top:1%">
+        <div class="card-body" style="padding:1%">
+            
         </div>
-        <div class="col-sm-10">
-        
+    </div>
+    <div class="card" style="width: calc(100% - 48px);height: auto;overflow: hidden;padding: 1%;background-color: #fff;border-radius: 5px;box-shadow: 1% ; margin-top:1%">
+        <div class="card-body" style="padding:1%">
+            
         </div>
     </div>
 </div>
-<?php require_once("./app/views/header-footer/footer.phtml"); ?>
+<div class="col-sm-3" style="text-align: left; padding-top:1%">
+    <div class="card" style="width: calc(100% - 48px);height: auto;overflow: hidden;padding: 1%;background-color: #fff;border-radius: 5px;box-shadow: 1% ">
+        <div class="card-body" style="padding:1%">
+            
+        </div>
+    </div>
+
+</div>
 
