--- a/app/views/question/question_detail.phtml
+++ b/app/views/question/question_detail.phtml
@@ -5,7 +5,7 @@
             <p><a href="#"><b>Society</b></a></p>
         </div>
 <div class="col-sm-7" style="text-align: left; padding:1%">
-    <div class="card" style="width: calc(100% - 48px);height: auto;overflow: hidden;padding: 1%;background-color: #fff;border-radius: 5px;box-shadow: 1% ">
+    <div class="card" style="width: width: 100%;height: auto;overflow: hidden;padding: 1%;background-color: #fff;border-radius: 5px;box-shadow: 1% ">
         <div class="card-body" style="padding:1%">
             <div class="row">
             <div class="col-md-1">
@@ -44,7 +44,7 @@
             </div>
         </div>
     </div>
-    <div class="card" style="width: calc(100% - 48px);height: auto;overflow: hidden;padding: 1%;background-color: #fff;border-radius: 5px;box-shadow:1%; margin-top:2% ">
+    <div class="card" style="width: width: 100%;height: auto;overflow: hidden;padding: 1%;background-color: #fff;border-radius: 5px;box-shadow:1%; margin-top:2% ">
         <div class="card-body" style="padding:1%">
             <div class="row">
                 <b style="font-size: 35px; margin-left:2%">Trả lời</b>
@@ -53,7 +53,7 @@
             <?php if (isset($answer) && count($answer) > 0) {
                     foreach ($answer as $ans) { ?> 
             <div>
-                <hr  style="width=30%; size=10px; align=center" />
+                <hr  style="width:30%; size:10px; align:center " />
                 <div class="row">
                     <div class="col-md-1">
                         <img src="<?php if($ans["user_image"] != null){echo $ans["user_image"];} else{echo _PUBLIC.'/images/User.png';}  ?>" height="40px" width="40px" style="background-color: transparent;margin-top: -5px; border-radius: 50%;">  
@@ -100,6 +100,21 @@
         </div>
     </div>    
 </div>
-<div class="col-sm-3" >
-
+<div class="col-sm-3" style="text-align: left; padding:1%">
+    <div class="card" style="width: 100%;height: auto;overflow: hidden;padding: 1%;background-color: #fff;border-radius: 5px;box-shadow: 1% ">
+        <div class="card-body" style="padding:1%">
+            <div class="row">
+                <div class="col-md-2">
+                    <img src="/UDPT-PROJECT/image/430945avatar.jpg" height="40px" width="40px" style="background-color: transparent;margin-top: 5px; border-radius: 10%;">  
+                </div>
+                <div class="col-md-9" style="margin-left:1%">
+                    <div class="row">
+                        <b style="font-size: 16px;">Nguyễn Phạm Anh Tú</b>
+                        <p style="font-size: 12px;">tubato1999@gmail.com</p>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
