--- a/app/views/header-footer/header.phtml
+++ b/app/views/header-footer/header.phtml
@@ -12,7 +12,7 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li class=""><a href="<?php echo _WEB_ROOT ?>">Home</a></li>
                 <li><a href="#">Ranking</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
