--- a/app/views/user/userProfile.phtml
+++ b/app/views/user/userProfile.phtml
@@ -199,7 +199,13 @@
                         <div class="row">
                           <div class="col-md-9"></div>
                           <div>
-                            <p style="text-align: center;font-size: 15px;"><?php echo $ques["likes"] ?><span style="margin-left:1%;margin-right:1%; " class="glyphicon glyphicon-thumbs-up"></span><?php echo $ques["comment"] ?> <span class="glyphicon glyphicon-comment"></span></p>
+                            <p style="text-align: center;font-size: 15px;">
+                              <span id="likes_of_<?php echo $ques["id_question"] ?>"><?php echo $ques["likes"] ?></span>
+                              <span style="margin-left:1%;margin-right:1%; " class="glyphicon glyphicon-thumbs-up">
+                              </span>
+                              <span id="answers_of_<?php echo $ques["id_question"] ?>"><?php echo $ques["comment"] ?></span>
+                              <span class="glyphicon glyphicon-comment"></span>
+                            </p>
                           </div>
                         </div>
                       </div>
@@ -490,4 +496,35 @@
       };
     });
   });
+</script>
+
+<script type="text/javascript">
+  $(document).ready(function() {
+    <?php
+    $url =  _API_ROOT . "/question/read-accepted-and-not-deleted.php";
+    ?>
+    setInterval(() => {
+      fetch('<?php echo $url ?>')
+        .then(
+          function(response) {
+            if (response.status !== 200) {
+              console.log('Lỗi, mã lỗi ' + response.status);
+              return;
+            }
+            // parse response data
+            response.json().then(data => {
+              var questions = data['res']['questions'];
+              for (var question of questions) {
+                $('#likes_of_' + question["id_question"]).text(question['likes']);
+                $('#answers_of_' + question["id_question"]).text(question['comment']);
+              }
+            })
+          }
+        )
+        .catch(err => {
+          console.log('Error :-S', err)
+        });
+    }, 3000);
+
+  }, );
 </script>
