--- a/app/views/user/userProfile.phtml
+++ b/app/views/user/userProfile.phtml
@@ -417,9 +417,7 @@
         success: function(result, status, xhr) {
           $("#loadMe").modal("hide");
           alert("Đăng câu hỏi thành công");
-          $('#exampleFormControlSelect1').val("");
-          $('#exampleFormControlTextarea1').val("");
-          $('#tag').val("");
+          window.location = "<?php echo _WEB_ROOT . "/userProfile/" . $_SESSION['user_id']; ?>";
         },
         error: function(xhr, status, error) {
           if (xhr.status == 401) {
