ranking in month

--- a/app/views/header-footer/header.phtml
+++ b/app/views/header-footer/header.phtml
@@ -13,7 +13,7 @@
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
                 <li class=""><a href="<?php echo _WEB_ROOT ?>">Home</a></li>
-                <li><a href="#">Ranking</a></li>
+                <li><a href="<?php echo _WEB_ROOT  . '/Home/Ranking' ?>">Ranking</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-nav">
